[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mthrottle"
version = "0.0.2"
authors = [
  { name="Benny Thadikaran" },
]
description = "A simple and generic rate limiter to prevent too many function calls or http requests."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["throttle", "throttler", "rate-limiter", "throttle-requests"]

[project.urls]
"Homepage" = "https://github.com/BennyThadikaran/mThrottle"
"Bug Tracker" = "https://github.com/BennyThadikaran/mThrottle/issues"
